# stealth-converter

./: .gitignore  CMakeLists.txt  FindAVCodec.cmake  FindAVFilter.cmake  FindAVFormat.cmake  LICENSE.md  LibAVFindComponent.cmake  Makefile  README.md  configure
CMakeModules/: FindFFmpeg.cmake
lib/: CMakeLists.txt
slides/: slides.md
src/: stealth-converter.cc
src/stream/: CMakeLists.txt  stream-data.cc  stream-data.hh  stream-data.hxx  stream-reader.cc  stream-reader.hh  stream-reader.hxx  stream-writer.cc  stream-writer.hh
src/stream-reader/: CMakeLists.txt  stream-reader.cc  stream-reader.hh  stream-reader.hxx
src/video-converter/: CMakeLists.txt  convert.cc  convert.hh  convert.hxx  cube-coordinate.cc  cube-coordinate.hh  cube-coordinate.hxx  frame-handler.cc  frame-handler.hh  frame-handler.hxx  helper.hh  helper.hxx
